--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
-
 <!DOCTYPE html>
 <html>
-	<head>
+
+<head>
 	<title>Museum Site</title>
 
 	<!-- Metadata -->
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=1 shrink-to-fit=no">
-	
+	<meta name="viewport"
+		content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=1 shrink-to-fit=no">
+
 	<!-- Stylesheets -->
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="responsive.css">
@@ -14,69 +15,78 @@
 	<!-- Fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">
+	<link
+		href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+		rel="stylesheet">
+	<link
+		href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap"
+		rel="stylesheet">
 
 	<!-- Icons -->
 	<script src="https://kit.fontawesome.com/0e2c6c821a.js" crossorigin="anonymous"></script>
-	</head>
+</head>
+
 <body>
-<div id="header">
+	<div id="header">
 		<div id="logo">
 			<h1>MUSEUM</h1>
 		</div>
-	        <div id="menu">
-		   <ul>
-			<li> <a href="#">Home</a></li>
-			<li> <a href="#">Gallery</a></li>
-			<li> <a href="#">About</a></li>
-			<li> <a href="#">Contact</a></li>
-		   </ul>
-         </div>
-</div>
-
-<div id="footer-div">
-<footer>
-	<div class="container">
-		<div class="sec aboutus">
-			<h2>About Us</h2>
-			<p>
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum ullam tempora consequatur eaque quas. Sunt placeat eligendi animi, fuga esse suscipit quam officiis cum consequatur nam commodi illo doloremque nihil.
-			</p>		
-		</div>
-		<div class= "sec quickLinks">
-			<h2>Quick Links</h2>
+		<div id="menu">
 			<ul>
-				<li><a href="#">Home</a></li>
-				<li><a href="#">Gallery</a></li>
-				<li><a href="#">About</a></li>
-				<li><a href="#">Contact</a></li>
-			</ul>
-		</div>
-		<div class="sec contact">
-			<h2>Contact Info</h2>
-			<ul class="info">
-				<li>
-					<span><i class="fas fa-map-marker-alt fa-sm" ></i></span>
-					<span>Temp address <br> Temp location, State, Zip Code</span>
-				</li>
-				<li>
-					<span><i class="fas fa-phone-alt fa-sm" ></i></span>
-					<p><a href="tel:12345678900">+1 234 567 8900</a><br><a href="tel:12345678900">+1 234 567 8900</a></p>
-				</li>
-				<li>
-					<span><i class="fas fa-envelope fa-sm" ></i></span>
-					<p><a href="mailto:temporary@email.com">temporary@email.com</a></p>
-				</li>
+				<li> <a href="#">Home</a></li>
+				<li> <a href="#">Gallery</a></li>
+				<li> <a href="#">About</a></li>
+				<li> <a href="#">Contact</a></li>
 			</ul>
 		</div>
 	</div>
-</footer>
-<div class="copyrightText">
-	<p>Copyright ©  2021 Disha Pant and Alya Singh</p>
-</div>
-</div>
+
+	<div id="footer-div">
+		<footer>
+			<div class="container">
+				<div class="sec aboutus">
+					<h2>About Us</h2>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum ullam tempora consequatur eaque
+						quas. Sunt placeat eligendi animi, fuga esse suscipit quam officiis cum consequatur nam commodi
+						illo doloremque nihil.
+					</p>
+				</div>
+				<div class="sec quickLinks">
+					<h2>Quick Links</h2>
+					<ul>
+						<li><a href="#">Home</a></li>
+						<li><a href="#">Gallery</a></li>
+						<li><a href="#">About</a></li>
+						<li><a href="#">Contact</a></li>
+					</ul>
+				</div>
+				<div class="sec contact">
+					<h2>Contact Info</h2>
+					<ul class="info">
+						<li>
+							<span><i class="fas fa-map-marker-alt fa-sm"></i></span>
+							<span>Temp address <br> Temp location, State, Zip Code</span>
+						</li>
+						<li>
+							<span><i class="fas fa-phone-alt fa-sm"></i></span>
+							<p><a href="tel:12345678900">+1 234 567 8900</a><br><a href="tel:12345678900">+1 234 567
+									8900</a></p>
+						</li>
+						<li>
+							<span><i class="fas fa-envelope fa-sm"></i></span>
+							<p><a href="mailto:temporary@email.com">temporary@email.com</a></p>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</footer>
+		<div class="copyrightText">
+			<p>Copyright © 2021 Disha Pant and Alya Singh</p>
+		</div>
+	</div>
 
 
 </body>
+
 </html>
