--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 		<div id="menu">
 			<ul>
 				<li> <a href="#">Home</a></li>
-				<li> <a href="#">Gallery</a></li>
 				<li> <a href="#">About</a></li>
+				<li> <a href="#">Tour</a></li>
 				<li> <a href="#">Contact</a></li>
 			</ul>
 		</div>
