--- a/index.html
+++ b/index.html
@@ -35,7 +35,15 @@
 			<ul>
 				<li> <a href="#">Home</a></li>
 				<li> <a href="#">About</a></li>
-				<li> <a href="#">Tour</a></li>
+				<li><a href="#">Tour</a>
+					<ul>
+						<li> <a href="#">Books</a></li>
+						<li> <a href="#">Films and Music</a></li>
+						<li> <a href="#">Important papers and Documents</a></li>
+						<li> <a href="#">Prominent leaders</a></li>
+						<li> <a href="#">Art and Sculptures</a></li>
+					</ul>
+				</li>
 				<li> <a href="#">Contact</a></li>
 			</ul>
 		</div>
