--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
                 <i class="fas fa-times" onclick="hideMenu()"></i>
                 <ul>
                     <li><a href="index.html">HOME</a></li>
-                    <li><a href="">ABOUT</a></li>
+                    <li><a href="about.html">ABOUT</a></li>
                     <li><a href="">TOUR</a></li>
                     <li><a href="">CONTACT</a></li>
                 </ul>
