--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<div class="nav-links" id="navLinks">
 				<i class="fas fa-times" onclick="hideMenu()"></i>
 				<ul>
-					<li><a href="">HOME</a></li>
+					<li><a href="index.html">HOME</a></li>
 					<li><a href="about.html">ABOUT</a></li>
 					<li><a href="">TOUR</a></li>
 					<li><a href="">CONTACT</a></li>
