--- a/contact.html
+++ b/contact.html
@@ -41,21 +41,50 @@
             </div>
             <i class="fas fa-bars" onclick="showMenu()"></i>
         </nav>
-        <h1>About Us</h1>
+        <h1>Contact Us</h1>
     </section>
 
-    <!-- About Us Content -->
-    <section class="about-us">
+    <!-- Contact Us Content -->
+    <section class="location">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3457.264290295728!2d-90.07272038579526!3d29.94307573031097!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8620a676da80ce1d%3A0x855a6fd37bed266a!2sThe%20National%20WWII%20Museum!5e0!3m2!1sen!2sin!4v1630129857129!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    </section>
+
+    <section class="contact-us">
         <div class="row">
-            <div class="about-col">
-                <h1>Lorem ipsum dolor sit amet consectetur</h1>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id ullam assumenda impedit optio voluptate
-                    ducimus obcaecati atque pariatur officia officiis dolores, eaque dicta enim totam sed amet facilis
-                    nemo aperiam.</p>
-                <a href="" class="btn1 red-btn">EXPLORE NOW</a>
+            <div class="contact-col">
+                <div>
+                    <i class="fas fa-home"></i>
+                    <span>
+                        <h5>XYZ Road, ABC Building</h5>
+                        <p>Bangalore, Karnataka, IN</p>
+                    </span>
+                </div>
+
+                <div>
+                    <i class="fas fa-phone"></i>
+                    <span>
+                        <h5>+1 012-345-6789</h5>
+                        <p>Monday to Saturday, 10AM to 6PM</p>
+                    </span>
+                </div>
+
+                <div>
+                    <i class="fas fa-envelope-open"></i>
+                    <span>
+                        <h5>info@museum.com</h5>
+                        <p>Email us your queries!</p>
+                    </span>
+                </div>
             </div>
-            <div class="aboul-col">
-                <img src="images/Books.png">
+
+            <div class="contact-col">
+                <form>
+                    <input type="text" placeholder="Enter your name" name="name" required>
+                    <input type="email" placeholder="Enter your email address" name="email" required>
+                    <input type="text" placeholder="Enter your subject" name="subject" required>
+                    <textarea rows="8" placeholder="Message" name="message" required></textarea>
+                    <button type="submit" class="btn1 red-btn">Send Message</button>
+                </form>
             </div>
         </div>
     </section>
