--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<ul>
 					<li><a href="index.html">HOME</a></li>
 					<li><a href="about.html">ABOUT</a></li>
-					<li><a href="">TOUR</a></li>
+					<li><a href="tour.html">TOUR</a></li>
 					<li><a href="contact.html">CONTACT</a></li>
 				</ul>
 			</div>
