--- a/tour.html
+++ b/tour.html
@@ -41,50 +41,38 @@
             </div>
             <i class="fas fa-bars" onclick="showMenu()"></i>
         </nav>
-        <h1>Contact Us</h1>
+        <h1>Tour</h1>
     </section>
 
-    <!-- Contact Us Content -->
-    <section class="location">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3457.264290295728!2d-90.07272038579526!3d29.94307573031097!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8620a676da80ce1d%3A0x855a6fd37bed266a!2sThe%20National%20WWII%20Museum!5e0!3m2!1sen!2sin!4v1630129857129!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-    </section>
-
-    <section class="contact-us">
-        <div class="row">
-            <div class="contact-col">
-                <div>
-                    <i class="fas fa-home"></i>
-                    <span>
-                        <h5>XYZ Road, ABC Building</h5>
-                        <p>Bangalore, Karnataka, IN</p>
-                    </span>
-                </div>
-
-                <div>
-                    <i class="fas fa-phone"></i>
-                    <span>
-                        <h5>+1 012-345-6789</h5>
-                        <p>Monday to Saturday, 10AM to 6PM</p>
-                    </span>
-                </div>
-
-                <div>
-                    <i class="fas fa-envelope-open"></i>
-                    <span>
-                        <h5>info@museum.com</h5>
-                        <p>Email us your queries!</p>
-                    </span>
-                </div>
+    <!-- Tour -->
+    <section class="tour">
+        <div class="exh-row">
+            <div class="tour-left">
+                <img src="images/Floor1.png">
             </div>
 
-            <div class="contact-col">
-                <form>
-                    <input type="text" placeholder="Enter your name" name="name" required>
-                    <input type="email" placeholder="Enter your email address" name="email" required>
-                    <input type="text" placeholder="Enter your subject" name="subject" required>
-                    <textarea rows="8" placeholder="Message" name="message" required></textarea>
-                    <button type="submit" class="btn1 red-btn">Send Message</button>
-                </form>
+            <div class="tour-right">
+                <h3>Rooms</h3>
+                <div id="room1">
+                    <a href="books.html"><span>Books</span></a>
+                    <span id="room1">1</span>
+                </div>
+                <div id="room2">
+                    <a href=""><span>Films and Music</span></a>
+                    <span id="room2">2</span>
+                </div>
+                <div id="room3">
+                    <a href=""><span>Important Papers and Documents</span></a>
+                    <span id="room3">3</span>
+                </div>
+                <div id="room4">
+                    <a href=""><span>Prominent Leaders</span></a>
+                    <span id="room4">4</span>
+                </div>
+                <div id="room5">
+                    <a href=""><span>Art and Sculptures</span></a>
+                    <span id="room5">5</span>
+                </div>
             </div>
         </div>
     </section>
