--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id ullam assumenda impedit optio voluptate
                     ducimus obcaecati atque pariatur officia officiis dolores, eaque dicta enim totam sed amet facilis
                     nemo aperiam.</p>
-                <a href="" class="btn1 red-btn">EXPLORE NOW</a>
+                <a href="tour.html" class="btn1 red-btn">EXPLORE NOW</a>
             </div>
             <div class="aboul-col">
                 <img src="images/Books.png">
@@ -73,7 +73,7 @@
             <i class="fab fa-instagram"></i>
             <i class="fab fa-linkedin"></i>
         </div>
-        <p>Made with <i class="far fa-heart"></i> by Alya Singh and Disha Pant</p>
+        <p>Copyright © 2021 · Alya Singh and Disha Pant</p>
     </section>
 
     <!-- Menu Toggle -->
