--- a/contact.html
+++ b/contact.html
@@ -102,7 +102,7 @@
             <i class="fab fa-instagram"></i>
             <i class="fab fa-linkedin"></i>
         </div>
-        <p>Made with <i class="far fa-heart"></i> by Alya Singh and Disha Pant</p>
+        <p>Copyright © 2021 · Alya Singh and Disha Pant</p>
     </section>
 
     <!-- Menu Toggle -->
