--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit non dolorem in beatae dignissimos neque,
 				facere cumque? Nesciunt veritatis eveniet totam laudantium voluptates et voluptas soluta, inventore
 				minima incidunt minus.</p>
-			<a href="" class="btn1">Take a tour!</a>
+			<a href="tour.html" class="btn1">Take a tour!</a>
 		</div>
 	</section>
 
@@ -155,7 +155,7 @@
 		<h1>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente natus veniam omnis voluptas ullam?
 			Distinctio doloribus, dolorem nam molestiae minus magnam mollitia sunt possimus iure dolorum atque, deserunt
 			impedit vel?</h1>
-		<a href="" class="btn1">CONTACT US</a>
+		<a href="contact.html" class="btn1">CONTACT US</a>
 
 	</section>
 
@@ -172,7 +172,7 @@
 			<i class="fab fa-instagram"></i>
 			<i class="fab fa-linkedin"></i>
 		</div>
-		<p>Made with <i class="far fa-heart"></i> by Alya Singh and Disha Pant</p>
+		<p>Copyright © 2021 · Alya Singh and Disha Pant</p>
 	</section>
 
 	<!-- Menu Toggle -->
