--- a/tour.html
+++ b/tour.html
@@ -58,19 +58,19 @@
                     <span id="room1">1</span>
                 </div>
                 <div id="room2">
-                    <a href=""><span>Films and Music</span></a>
+                    <a href="film_and_music.html"><span>Films and Music</span></a>
                     <span id="room2">2</span>
                 </div>
                 <div id="room3">
-                    <a href=""><span>Important Papers and Documents</span></a>
+                    <a href="important_documents.html"><span>Important Papers and Documents</span></a>
                     <span id="room3">3</span>
                 </div>
                 <div id="room4">
-                    <a href=""><span>Prominent Leaders</span></a>
+                    <a href="prominent_leaders.html"><span>Prominent Leaders</span></a>
                     <span id="room4">4</span>
                 </div>
                 <div id="room5">
-                    <a href=""><span>Art and Sculptures</span></a>
+                    <a href="art_and_sculptures.html"><span>Art and Sculptures</span></a>
                     <span id="room5">5</span>
                 </div>
             </div>
@@ -90,7 +90,7 @@
             <i class="fab fa-instagram"></i>
             <i class="fab fa-linkedin"></i>
         </div>
-        <p>Made with <i class="far fa-heart"></i> by Alya Singh and Disha Pant</p>
+        <p>Copyright © 2021 · Alya Singh and Disha Pant</p>
     </section>
 
     <!-- Menu Toggle -->
