--- a/index.html
+++ b/index.html
@@ -35,7 +35,15 @@
 				<ul>
 					<li><a href="index.html">HOME</a></li>
 					<li><a href="about.html">ABOUT</a></li>
-					<li><a href="tour.html">TOUR</a></li>
+					<li><a href="tour.html">TOUR</a>
+						<ul>
+							<li><a href="">Books</a></li>
+							<li><a href="">Films and Music</a></li>
+							<li><a href="">Important papers and Documents</a></li>
+							<li><a href="">Prominent leaders</a></li>
+							<li><a href="">Art and Sculptures</a></li>
+						</ul>
+					</li>
 					<li><a href="contact.html">CONTACT</a></li>
 				</ul>
 			</div>
