--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,15 @@
                 <ul>
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="about.html">ABOUT</a></li>
-                    <li><a href="tour.html">TOUR</a></li>
+                    <li><a href="tour.html">TOUR</a>
+                        <ul>
+                            <li><a href="">Books</a></li>
+                            <li><a href="">Films and Music</a></li>
+                            <li><a href="">Important papers and Documents</a></li>
+                            <li><a href="">Prominent leaders</a></li>
+                            <li><a href="">Art and Sculptures</a></li>
+                        </ul>
+                    </li>
                     <li><a href="contact.html">CONTACT</a></li>
                 </ul>
             </div>
@@ -46,7 +54,9 @@
 
     <!-- Contact Us Content -->
     <section class="location">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3457.264290295728!2d-90.07272038579526!3d29.94307573031097!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8620a676da80ce1d%3A0x855a6fd37bed266a!2sThe%20National%20WWII%20Museum!5e0!3m2!1sen!2sin!4v1630129857129!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3457.264290295728!2d-90.07272038579526!3d29.94307573031097!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8620a676da80ce1d%3A0x855a6fd37bed266a!2sThe%20National%20WWII%20Museum!5e0!3m2!1sen!2sin!4v1630129857129!5m2!1sen!2sin"
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </section>
 
     <section class="contact-us">
