--- a/important_documents.html
+++ b/important_documents.html
@@ -44,6 +44,10 @@
         <h1>Books</h1>
     </section>
 
+    <!-- Virtual Tour -->
+    <section class="map-responsive">
+        <iframe src="https://www.google.com/maps/embed?pb=!4v1630292668275!6m8!1m7!1sCAoSLEFGMVFpcE5SZTBST1FoLURwMHFtSzY0ZzVTbkt0MGFQeGhXZzJVNXhWY3VT!2m2!1d29.9431497!2d-90.0703166!3f194.96785!4f17.10611!5f0.7820865974627469" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    </section>
     <!-- Exhibition Content -->
     <section class="items">
         <h1>Items</h1>
