--- a/film_and_music.html
+++ b/film_and_music.html
@@ -49,7 +49,7 @@
             </div>
             <i class="fas fa-bars" onclick="showMenu()"></i>
         </nav>
-        <h1>Books</h1>
+        <h1>Films and Music</h1>
     </section>
 
     <!-- Exhibition Content -->
