--- a/important_documents.html
+++ b/important_documents.html
@@ -49,11 +49,15 @@
             </div>
             <i class="fas fa-bars" onclick="showMenu()"></i>
         </nav>
-        <h1>Books</h1>
+        <h1>Important Papers and Documents</h1>
     </section>
 
     <!-- Virtual Tour -->
     <section class="map-responsive">
+        <h1>Items</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ea, esse cupiditate, sapiente modi ducimus
+            accusamus quisquam provident eligendi rerum corporis sequi facere atque obcaecati ipsam dolorem ut nesciunt
+            et?</p>
         <iframe src="https://www.google.com/maps/embed?pb=!4v1630292668275!6m8!1m7!1sCAoSLEFGMVFpcE5SZTBST1FoLURwMHFtSzY0ZzVTbkt0MGFQeGhXZzJVNXhWY3VT!2m2!1d29.9431497!2d-90.0703166!3f194.96785!4f17.10611!5f0.7820865974627469" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </section>
     <!-- Exhibition Content -->
