--- a/prominent_leaders.html
+++ b/prominent_leaders.html
@@ -49,7 +49,7 @@
             </div>
             <i class="fas fa-bars" onclick="showMenu()"></i>
         </nav>
-        <h1>Books</h1>
+        <h1>Prominent Leaders</h1>
     </section>
 
     <!-- Exhibition Content -->
