--- a/books.html
+++ b/books.html
@@ -124,11 +124,9 @@
             </div>
 
             <div class="extra-col">
-                <img src="images/telegram.jpg">
-                <h3>Fake Telegrams</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit dolores libero quam voluptas,
-                    nesciunt vel ullam doloribus iure eveniet est sint ratione debitis, consequuntur, rerum hic quidem
-                    voluptatibus? Dignissimos, eligendi.</p>
+                <img src="images/the slaves of solitude.png">
+                <h3>The Slaves of Solitude by Patrick Hamilton</h3>
+                <p>The Slaves of Solitude was published in 1947.It has been described as 'one of the best novels about the second world war' by David Lodge.The Slaves of Solitude is set in Thames Lockdon during World War Two; and is centred around a boarding house, the Rosamund Tea Rooms. </p>
             </div>
         </div>
     </section>
