books page final

--- a/books.html
+++ b/books.html
@@ -52,6 +52,14 @@
         <h1>Books</h1>
     </section>
 
+    <!-- Virtual Tour -->
+    <section class="map-responsive">
+        <h1>Tour</h1>
+        <p>A virtual view inside the war</p>
+
+        <iframe src="https://www.google.com/maps/embed?pb=!4v1630472226144!6m8!1m7!1sCAoSLEFGMVFpcFBQUWRRck5iWV9vZUhxZmUzb3BlSXNHd3RGTy14SWg1cG1wWEhw!2m2!1d29.9426564!2d-90.07038899999999!3f195.19647320021375!4f-0.7337496372651486!5f0.7820865974627469" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    </section>
+
     <!-- Exhibition Content -->
     <section class="items">
         <h1>Introduction</h1>
